--- a/package.json
+++ b/package.json
@@ -7,27 +7,40 @@
     "dev:direct": "node scripts/start-dev.js",
     "dev:next": "next dev",
     "dev:alt": "next dev -p 3001",
+    "dev:https": "node start-https.js",
+    "setup:https": "node scripts/setup-https.js",
     "prebuild": "node scripts/check-image-domains.js",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "check-errors": "node scripts/check-build-errors.js"
+    "check-errors": "node scripts/check-build-errors.js",
+    "setup-db": "node scripts/setup-database.js",
+    "verify-db": "node scripts/verify-database.js"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.2",
+    "@stripe/react-stripe-js": "^3.1.1",
+    "@stripe/stripe-js": "^5.7.0",
+    "@supabase/ssr": "^0.5.2",
+    "@supabase/supabase-js": "^2.49.1",
     "@types/js-cookie": "^3.0.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
+    "framer-motion": "^12.4.7",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.476.0",
     "next": "^14.1.0",
+    "nodemailer": "^6.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "stripe": "^17.7.0",
     "tailwind-merge": "^3.0.2"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^20.11.19",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
     "autoprefixer": "^10.4.17",
