Added documentation and reorganized file structure

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev:direct": "node scripts/start-dev.js",
     "dev:next": "next dev",
     "dev:alt": "next dev -p 3001",
-    "dev:https": "node start-https.js",
+    "dev:https": "node scripts/start-https.js",
     "setup:https": "node scripts/setup-https.js",
     "prebuild": "node scripts/check-image-domains.js",
     "build": "next build",
