--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "verify-db": "node scripts/verify-database.js"
   },
   "dependencies": {
+    "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@stripe/react-stripe-js": "^3.1.1",
     "@stripe/stripe-js": "^5.7.0",
     "@supabase/ssr": "^0.5.2",
