--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "scripts": {
     "dev": "node scripts/launcher.js",
     "dev:direct": "node scripts/start-dev.js",
+    "dev:preview": "node scripts/auto-open-dev.js",
     "dev:next": "next dev",
     "dev:alt": "next dev -p 3001",
     "dev:https": "node scripts/start-https.js",
+    "setup": "node scripts/setup-local-dev.js",
     "setup:https": "node scripts/setup-https.js",
+    "setup:supabase": "node scripts/setup-supabase.js",
     "prebuild": "node scripts/check-image-domains.js",
     "build": "next build",
     "build:vercel": "node scripts/vercel-build.js",
@@ -19,6 +22,7 @@
     "verify-db": "node scripts/verify-database.js"
   },
   "dependencies": {
+    "@modelcontextprotocol/server-postgres": "^0.6.2",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
@@ -34,7 +38,9 @@
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.476.0",
     "next": "^14.1.0",
+    "node-fetch": "^2.7.0",
     "nodemailer": "^6.10.0",
+    "pg": "^8.13.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "stripe": "^17.7.0",
