--- a/package.json
+++ b/package.json
@@ -19,15 +19,19 @@
     "lint": "next lint",
     "check-errors": "node scripts/check-build-errors.js",
     "setup-db": "node scripts/setup-database.js",
-    "verify-db": "node scripts/verify-database.js"
+    "verify-db": "node scripts/verify-database.js",
+    "mcp-server": "node scripts/start-mcp-server.js"
   },
   "dependencies": {
     "@modelcontextprotocol/server-postgres": "^0.6.2",
+    "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
+    "@radix-ui/react-toast": "^1.2.6",
     "@stripe/react-stripe-js": "^3.1.1",
     "@stripe/stripe-js": "^5.7.0",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.49.1",
     "@types/js-cookie": "^3.0.6",
