--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "node scripts/launcher.js",
+    "dev": "node scripts/auto-fix-dev.js",
+    "dev:launcher": "node scripts/launcher.js",
     "dev:direct": "node scripts/start-dev.js",
     "dev:preview": "node scripts/auto-open-dev.js",
     "dev:next": "next dev",
