Fix console errors and warnings in the application

--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "mcp-server": "node scripts/start-mcp-server.js",
     "fix:all": "node scripts/fix-all-errors.js",
     "fix:viewport": "node scripts/fix-viewport-metadata.js",
-    "fix:supabase": "node scripts/fix-supabase-config.js",
-    "fix:typescript": "node scripts/fix-typescript-errors.js"
+    "fix:supabase": "node scripts/fix-supabase-config.js"
   },
   "dependencies": {
     "@modelcontextprotocol/server-postgres": "^0.6.2",
