--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev:next": "next dev",
     "dev:alt": "next dev -p 3001",
     "dev:https": "node scripts/start-https.js",
+    "dev:simple": "node scripts/direct-dev.js",
     "setup": "node scripts/setup-local-dev.js",
     "setup:https": "node scripts/setup-https.js",
     "setup:supabase": "node scripts/setup-supabase.js",
@@ -26,10 +27,14 @@
     "fix:all": "node scripts/fix-all-errors.js",
     "fix:viewport": "node scripts/fix-viewport-metadata.js",
     "fix:supabase": "node scripts/fix-supabase-config.js",
-    "delete-users": "node scripts/delete-test-users.js"
+    "delete-users": "node scripts/delete-test-users.js",
+    "disable-email-verification": "node scripts/disable-email-confirmation.js"
   },
   "dependencies": {
     "@modelcontextprotocol/server-postgres": "^0.6.2",
+    "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
