Implement Phase 2: Cleanup and organization of codebase

--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "fix:all": "node scripts/fix-all-errors.js",
     "fix:viewport": "node scripts/fix-viewport-metadata.js",
     "fix:supabase": "node scripts/fix-supabase-config.js",
-    "delete-users": "node scripts/delete-test-users.js",
-    "disable-email-verification": "node scripts/disable-email-confirmation.js"
+    "delete-users": "node scripts/delete-test-users.js"
   },
   "dependencies": {
     "@modelcontextprotocol/server-postgres": "^0.6.2",
