--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "test:auth": "node scripts/testing/test-auth-flow.js",
     "test:auth:browser": "node scripts/testing/browser-auth-test.js",
     "test:full-journey": "node scripts/testing/full-user-journey-test.js",
-    "test:install-deps": "node scripts/testing/install-test-deps.js"
+    "test:install-deps": "node scripts/testing/install-test-deps.js",
+    "test:session-debug": "jest tests/session-debug.test.js --runInBand"
   },
   "dependencies": {
     "@modelcontextprotocol/server-postgres": "^0.6.2",
@@ -72,6 +73,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20.11.19",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^18.2.57",
@@ -79,8 +81,10 @@
     "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.1.0",
+    "jest": "^29.7.0",
     "node-fetch": "^2.7.0",
     "open": "^9.1.0",
+    "playwright": "^1.51.0",
     "postcss": "^8.4.35",
     "puppeteer": "^24.4.0",
     "tailwindcss": "^3.4.1",
