Update build script to ensure dependencies are installed correctly

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "setup:supabase": "node scripts/setup/setup-supabase.js",
     "setup:error-logger": "node scripts/development/browser-error-logger.js",
     "prebuild": "node scripts/utils/check-image-domains.js",
-    "build": "next build",
+    "build": "npm install --force && next build",
     "build:vercel": "node scripts/utils/vercel-build.js",
     "start": "next start",
     "lint": "next lint",
@@ -38,6 +38,7 @@
     "test:auth": "node scripts/testing/test-auth-flow.js",
     "test:auth:browser": "node scripts/testing/browser-auth-test.js",
     "test:full-journey": "node scripts/testing/full-user-journey-test.js",
+    "test:addon-checkout": "node scripts/testing/test-addon-checkout.js",
     "test:install-deps": "node scripts/testing/install-test-deps.js",
     "test:session-debug": "jest tests/session-debug.test.js --runInBand"
   },
@@ -51,7 +52,7 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
-    "@stripe/react-stripe-js": "^3.1.1",
+    "@stripe/react-stripe-js": "^3.4.0",
     "@stripe/stripe-js": "^5.7.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.5.2",
@@ -62,14 +63,17 @@
     "dotenv": "^16.4.7",
     "framer-motion": "^12.4.7",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.476.0",
     "next": "^14.1.0",
     "nodemailer": "^6.10.0",
     "pg": "^8.13.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sonner": "^2.0.1",
     "stripe": "^17.7.0",
-    "tailwind-merge": "^3.0.2"
+    "tailwind-merge": "^3.0.2",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
