Various bug fixes and updates

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,36 @@
-browser-test-output/\nscripts/testing/screenshots/\ntest-output/\ntest-files/
+# Dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# Testing
+/coverage
+/browser-test-output
+/test-output
+/scripts/testing/screenshots
+
+# Next.js
+/.next/
+/out/
+
+# Production
+/build
+
+# Misc
+.DS_Store
+*.pem
+
+# Debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Local env files
+.env*.local
+
+# Vercel
+.vercel
+
+# TypeScript
+*.tsbuildinfo
+next-env.d.ts
